--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
     <artifactId>translate-to-thymeleaf</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <maven.compiler.source>1.11</maven.compiler.source>
+        <maven.compiler.target>1.11</maven.compiler.target>
+    </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
